# learn-data-engineering

./: .coverage  .dockerignore  .env  .gitlab-ci.yml  Dockerfile  Makefile  README.md  crawler.yml  crawler_multi.yml  genenv.py  local.ini  psql.yml  pyproject.toml  rabbitmq.yml  scheduler.yml
.github/workflows/: ci.yml
finandata/: config.py  producer.py  scheduler.py
finandata/backend/db/: clients.py  db.py
finandata/crawler/: taiwan_futures_daily.py  taiwan_stock_price.py
finandata/schema/: dataset.py
finandata/tasks/: tasks.py  worker.py
tests/crawler/: test_taiwan_stock_price.py
